# FinalProyect

./: .breakpoints  .gitignore  .replit  CMakeLists.txt  Makefile  README.md  main  main.cpp  out  register.txt  test  test.cpp  wiiiii.drawio
database/: register.txt
ext/: conio.h
include/: ability.h  basic.h  board.h  bomb.h  button.h  character.h  colors.h  end-game.h  enemy.h  engine.h  entity.h  game-over.h  game.h  hero.h  interface.h  level.h  main-menu.h  maze.h  menu.h  moveable.h  next-level.h  normal.h  object.h  personaje.h  player.h  power-up.h  register.h  resources.h  screen.h  smart.h  stable.h  stats.h  structures.h  tile.h
includes/: maze.h
lib/: beep.c  guid.h
provider/: database.h  register.txt
src/: ability.cpp  board.cpp  bomb.cpp  button.cpp  character.cpp  end-game.cpp  enemy.cpp  engine.cpp  entity.cpp  game-over.cpp  game.cpp  interface.cpp  level.cpp  main-menu.cpp  main.cpp  maze.cpp  menu.cpp  moveable.cpp  next-level.cpp  normal.cpp  object.cpp  personaje.cpp  player.cpp  power-up.cpp  register.cpp  screen.cpp  smart.cpp  stable.cpp  test  test.cpp  tile.cpp
util/: array.h
